<resources>
    <string name="app_name">РГС Подпись</string>
    <string name="app_settings">РГС Подпись (Настройки)</string>
    <string name="title_activity_signature">Подпись</string>
    <string name="title_activity_camera">Камера</string>

    <string name="action_camera">Камера</string>
    <string name="action_download">Скачать</string>
    <string name="action_clear">Очистить</string>
    <string name="action_info">Информация</string>
    <string name="action_has_signature">Проверка подписи</string>

    <string name="message">Информация</string>
    <string name="cancel">Отмена</string>
    <string name="info">Информация о версии</string>

    <string name="c_name">Росгосстрах Медицина</string>
    <string name="canvas_cleared">Экран очищен</string>

    <string name="make_authorization_request">Make Authorization Request</string>
    <string name="make_api_call">Make API Call</string>
    <string name="sign_out">Sign Out</string>

    <string name="restrictions_pending_block_user">This application is
        waiting for further configuration details and cannot continue
        to run. Please contact your IT admin for further details</string>
</resources>
