<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zaurkandokhov.signature.SignatureActivity">

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_camera"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_done_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_download"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_info"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_has_signature"
        android:orderInCategory="100"
        android:title="@string/action_has_signature"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>